change opacity to rgba

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <input id="author" type="text" class="input-group-text mb-2 p-2  border-dark w-100" onblur = 'this.placeholder="Kathy Sierra, Bert Bates"'' onfocus="this.placeholder = ''" placeholder="Kathy Sierra, Bert Bates"></input>
           <h5>Url</h5>
           <input id="url" type="text" class="input-group-text mb-2 p-2 border-dark w-100" onblur = 'this.placeholder="https://b-ok.cc/book/899239/a0858f"' onfocus="this.placeholder = ''" placeholder="https://b-ok.cc/book/899239/a0858f"></input>
-          <button id="info" class="btn btn-secondary btn-outline-dark mt-3" type="submit">Submit</button>
+          <button id="info" class="btn btn-dark mt-3" type="submit">Submit</button>
         </form>
       </div>
 
